--- a/config.yml
+++ b/config.yml
@@ -21,5 +21,5 @@ rate:
     level3: 0
 
 # output folder: 
-# directory: ''  # set an empty string to store in the same folder as bin
-directory: 'C:\Users\fredw\Desktop\new_build'   # set the absolute path of the destination 
+# directory: ''  # set an empty string to store csv in the same folder as the application root folder
+directory: 'C:\Users\fredw\Desktop\new_build'   # set the absolute path of the destination. NO TRAILING '\'
